#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(slp, 0.2, rju@informatik.uni-kiel.de)
AM_INIT_AUTOMAKE(slp, 0.2)

AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AM_PROG_LEX
AM_PROG_CC_C_O

# Checks for libraries.

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_MAJOR
AC_CHECK_HEADERS([fcntl.h inttypes.h libintl.h locale.h memory.h stdlib.h string.h strings.h sys/file.h sys/param.h sys/time.h unistd.h utime.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT8_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_CHECK_MEMBERS([struct stat.st_blksize])
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memchr memset strdup])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
